@@ -4,6 +4,7 @@ mintupdate (4.2.3) katya; urgency=low
   * Asynchronous changelog retrieval
   * Cleaned up Ubuntu changelog retrieval
   * Migrated from wget to urllib2 for changelog retrieval
+  * Only show mintupdate update when available to make sure rules are updated first
 
  -- Clement Lefebvre <root@linuxmint.com>  Wed,  23 Mar 2011 13:23:00 +0000
 
